--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="swiper-bundle.css">
+    <link rel="stylesheet" href="swiper-bundle.min.css">
     <link rel="icon" href="images/logo_tsezelen_main2.png">
     <title>Tsezelen</title>
 </head>
 <body>
-
     <header>
         <div id="darkerID" class="darker">
             <div class="nav" id="mini_header">
@@ -21,79 +20,120 @@
                     <div id="st3" class="stick"></div>
                 </div>
                 <div class="naver">
-                    <a href="catalog.php"><div class="parallelogram"><p class="p_naver">Зал готовых работ</p></div></a>
-                    <a href="index.html"><div class="parallelogram"><p class="p_naver">Зал гардероба напрокат</p></div></a>
+                    <a href="about.html"><div class="parallelogram"><p class="p_naver">Обо мне</p></div></a>
+                    <a href="index.html"><div class="parallelogram"><p class="p_naver">Публичная деятельность</p></div></a>
                     <a href="index.html"><div class="parallelogram"><p class="p_naver">Лупа <br> эстета</p></div></a>
                 </div>
             </div>
             <div class="burger_menu">
                 <a href="index.html" class="bigger_burger_a">ГЛАВНАЯ</a>
-                <a href="catalog.php" class="bigger_burger_a">ЗАЛ ГОТОВЫХ РАБОТ</a>
-                <a href="index.html" class="bigger_burger_a">ЗАЛ ГАРДЕРОБА НАПРОКАТ</a>
+                <a href="index.html" class="bigger_burger_a">ПУБЛИЧНАЯ ДЕЯТЕЛЬНОСТЬ</a>
+                <a href="about.html" class="bigger_burger_a">ОБО МНЕ</a>
                 <div class="smaller">
+                    <a href="index.html" class="burger_a">ТОЧНОСТЬ ЛЕКАЛ</a>
+                    <a href="index.html" class="burger_a">РУЧНАЯ ВЫШИВКА</a>
+                    <a href="index.html" class="burger_a">ДЕКОРИРОВАНИЕ ФУТБОЛОК</a>
+                    <a href="index.html" class="burger_a">БЕЛЫЕ РУБАШКИ</a>
+                    <a href="index.html" class="burger_a">БАЛЬНОЕ ПЛАТЬЕ НАПРОКАТ</a>
                     <a href="index.html" class="burger_a">ЛУПА ЭСТЕТА</a>
                     <a onclick="backwards()" href="#footer_contacts" class="burger_a scroll">КОНТАКТЫ</a>
-                    <a href="index.html" class="burger_a">ОТЗЫВЫ</a>
                 </div>
             </div>
+            <h1 class="header_name_page">ГЛАВНАЯ</h1>
+            <div class="line_big" style="background-color: white; position: absolute; top: 97%; left: 9%;"></div>
         </div>
     </header>
-    <main>
+    <main style="height: 100vh;">
         <a href="#darkerID" class="scrollToTop scroll"><img class="imgToTop" src="images/strelka_rjfnfkmhm72a_64.png"></a>
-        <h1>ОБО МНЕ</h1>
-        <div class="line_big"></div>
-        <div class="background_profile">
-            <img src="images/profile_image.jpg" class="img_profile">
-            <div class="text_profile">
-                <h3>Елена Цезельская</h3>
-                <div class="line_small"></div>
-                <p>Дизайнер и конструктор одежды <br>
-                    Художник по вышивке <br>
-                    Дизайнер и конструктор одежды <br>
-                    Художник по вышивке</p>
-                <a href="#footer_contacts" class="button_description scroll">Мои соцсети</a>
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide" style="background-image: url(images/main_swipe_image1.jpg);">
+                    <div class="swiper-slide-div">
+                        <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
+                            <h1>Ручная вышивка</h1>
+                            <a href="#">Подробнее >></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide" style="background-image: url(images/main_swipe_image2.jpg);">
+                    <div class="swiper-slide-div">
+                        <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
+                            <h1>Точность лекал</h1>
+                            <a href="#">Подробнее >></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide" style="background-image: url(images/main_swipe_image3.jpg);">
+                    <div class="swiper-slide-div">
+                        <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
+                            <h1>Декорирование футболок</h1>
+                            <a href="#">Подробнее >></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide" style="background-image: url(images/main_swipe_image4.jpg);">
+                    <div class="swiper-slide-div">
+                        <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
+                            <h1>Белые рубашки</h1>
+                            <a href="#">Подробнее >></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide" style="background-image: url(images/main_swipe_image1.jpg);">
+                    <div class="swiper-slide-div">
+                        <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
+                            <h1>Бальное платье напрокат</h1>
+                            <a href="#">Подробнее >></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide" style="background-image: url(images/main_swipe_image2.jpg);">
+                    <div class="swiper-slide-div">
+                        <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
+                            <h1>Хочу как на фоточке</h1>
+                            <a href="#">Подробнее >></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide" style="background-image: url(images/main_swipe_image1.jpg);">
+                    <div class="swiper-slide-div">
+                        <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
+                            <h1>Публичная деятельность</h1>
+                            <a href="#">Подробнее >></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide" style="background-image: url(images/main_swipe_image4.jpg);">
+                    <div class="swiper-slide-div">
+                        <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
+                            <h1>Лупа эстета</h1>
+                            <a href="#">Подробнее ></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide" style="background-image: url(images/main_swipe_image1.jpg);">
+                    <div class="swiper-slide-div">
+                        <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
+                            <h1>Гардероб Елены Цезельской</h1>
+                            <a href="#">Подробнее ></a>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <div class="swiper-scrollbar" style="height: 40vh; top: 30vh; background: rgba(255, 255, 255, 0.2);"></div>
         </div>
-
-        <h1>КОНЦЕПЦИЯ</h1>
-        <div class="line_big"></div>
-        <p class="narration"> <span class="emphasis">Lorem ipsum</span> dolor sit amet, consectetur
-            adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut
-            enim ad minim veniam, quis <span class="emphasis">nostrud</span> 
-            exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat</p>
-        <div class="background_picture_narration"></div>
-        <p class="narration"> <span class="emphasis">Lorem ipsum</span> dolor sit amet, consectetur
-            adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut
-            enim ad minim veniam, quis <span class="emphasis">nostrud</span> 
-            exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat</p>
-        <div class="background_picture_narration"></div>
-
-        <h1>ФИЛОСОФИЯ БРЕНДА</h1>
-        <div class="line_big"></div>
-        <div class="background_narration">
-            <p class="narration"> <span class="emphasis_darker">Lorem ipsum</span> dolor sit amet, consectetur
-                adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis <span class="emphasis_darker">nostrud</span> 
-                exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat</p>
-        </div>
-        <footer id="footer_contacts">
-            <div class="indent_footer">
-                <img src="images/logo_tsezelen_full2_gradient_horiz_png.png" class="footer_logo">
-                <h4>Контактная информация</h4>
-                <div class="footer_string"><img src="images/pngegg.png" class="img_contact_footer"><p class="footer_p">+7 924 307 67 07</p></div>
-                <div class="footer_string"><img src="images/pngwing.com.png" class="img_contact_footer"><p class="footer_p">tsezhel@mail.ru</p></div>
-                <div class="footer_string"><img src="images/free-icon-pin-map-4230161.png" class="img_contact_footer"><p class="footer_p">г. Хабаровск, ул. Какая-то-там, 52</p></div>
-                <h4>Социальные сети</h4>
-                <h4>Документы</h4>
-            </div>
-        </footer>
     </main>
+    <footer id="footer_contacts" style="border-top-right-radius: 0px; margin-top: 0px; height: 100vh;">
+        <div class="indent_footer" style="padding-top: 60px;">
+            <h4>Контактная информация</h4>
+            <div class="footer_string"><img src="images/pngegg.png" class="img_contact_footer"><p class="footer_p">+7 924 307 67 07</p></div>
+            <div class="footer_string"><img src="images/pngwing.com.png" class="img_contact_footer"><p class="footer_p">tsezhel@mail.ru</p></div>
+            <div class="footer_string"><img src="images/free-icon-pin-map-4230161.png" class="img_contact_footer"><p class="footer_p">г. Хабаровск, ул. Какая-то-там, 52</p></div>
+            <h4>Социальные сети</h4>
+            <div class="footer_string"><img src="images/telegram_icon.png" class="img_contact_footer"><a class="footer_p" href="https://t.me/tsezelen" style="text-decoration: underline;">Телеграм канал</a></div>
+            <h4>Документы</h4>
+        </div>
+    </footer>
     <script src="swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
