--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="line_big" style="background-color: white; position: absolute; top: 97%; left: 9%;"></div>
         </div>
     </header>
-    <main style="height: 100vh;">
+    <main style="height: 100dvh;">
         <a href="#darkerID" class="scrollToTop scroll"><img class="imgToTop" src="images/strelka_rjfnfkmhm72a_64.png"></a>
         <div class="swiper">
             <div class="swiper-wrapper">
@@ -120,10 +120,10 @@
                     </div>
                 </div>
             </div>
-            <div class="swiper-scrollbar" style="height: 40vh; top: 30vh; background: rgba(255, 255, 255, 0.2);"></div>
+            <div class="swiper-scrollbar" style="height: 40dvh; top: 30dvh; background: rgba(255, 255, 255, 0.2);"></div>
         </div>
     </main>
-    <footer id="footer_contacts" style="border-top-right-radius: 0px; margin-top: 0px; height: 100vh;">
+    <footer id="footer_contacts" style="border-top-right-radius: 0px; margin-top: 0px; height: 100dvh;">
         <div class="indent_footer" style="padding-top: 60px;">
             <h4>Контактная информация</h4>
             <div class="footer_string"><img src="images/pngegg.png" class="img_contact_footer"><p class="footer_p">+7 924 307 67 07</p></div>
