correct little mistakes, add marquee

--- a/index.html
+++ b/index.html
@@ -19,20 +19,28 @@
                     <div id="st2" class="stick"></div>
                     <div id="st3" class="stick"></div>
                 </div>
-                <div class="naver">
-                    <a href="about.html"><div class="parallelogram"><p class="p_naver">Обо мне</p></div></a>
-                    <a href="index.html"><div class="parallelogram"><p class="p_naver">Публичная деятельность</p></div></a>
-                    <a href="index.html"><div class="parallelogram"><p class="p_naver">Лупа <br> эстета</p></div></a>
-                </div>
+                <marquee class="marquee" scrollamount="8">
+                    <a href="index.html">Главная</a>
+                    <a href="index.html">Публичная деятельность</a>
+                    <a href="about.html">Обо мне</a>
+                    <a href="index.html">Ручная вышивка</a>
+                    <a href="index.html">Индивидуальные лекала</a>
+                    <a href="index.html">ART футболки</a>
+                    <a href="index.html">Белые рубашки</a>
+                    <a href="index.html">Бальное платье напрокат</a>
+                    <a href="index.html">Хочу как на фоточке</a>
+                    <a href="index.html">Мой гардероб</a>
+                    <a href="#footer_contacts" class="scroll">Контакты</a>
+                </marquee>
             </div>
             <div class="burger_menu">
                 <a href="index.html" class="bigger_burger_a">ГЛАВНАЯ</a>
                 <a href="index.html" class="bigger_burger_a">ПУБЛИЧНАЯ ДЕЯТЕЛЬНОСТЬ</a>
                 <a href="about.html" class="bigger_burger_a">ОБО МНЕ</a>
                 <div class="smaller">
-                    <a href="index.html" class="burger_a">ТОЧНОСТЬ ЛЕКАЛ</a>
                     <a href="index.html" class="burger_a">РУЧНАЯ ВЫШИВКА</a>
-                    <a href="index.html" class="burger_a">ДЕКОРИРОВАНИЕ ФУТБОЛОК</a>
+                    <a href="index.html" class="burger_a">ИНДИВИДУАЛЬНЫЕ ЛЕКАЛА</a>
+                    <a href="index.html" class="burger_a">ART ФУТБОЛКИ</a>
                     <a href="index.html" class="burger_a">БЕЛЫЕ РУБАШКИ</a>
                     <a href="index.html" class="burger_a">БАЛЬНОЕ ПЛАТЬЕ НАПРОКАТ</a>
                     <a href="index.html" class="burger_a">ЛУПА ЭСТЕТА</a>
@@ -40,7 +48,11 @@
                 </div>
             </div>
             <h1 class="header_name_page">ГЛАВНАЯ</h1>
-            <div class="line_big" style="background-color: white; position: absolute; top: 97%; left: 9%;"></div>
+            <div class="arrow-7">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </header>
     <main style="height: 100dvh;">
@@ -51,23 +63,20 @@
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Ручная вышивка</h1>
-                            <a href="#">Подробнее >></a>
                         </div>
                     </div>
                 </div>
                 <div class="swiper-slide" style="background-image: url(images/main_swipe_image2.jpg);">
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
-                            <h1>Точность лекал</h1>
-                            <a href="#">Подробнее >></a>
+                            <h1>Индивидуальные лекала</h1>
                         </div>
                     </div>
                 </div>
                 <div class="swiper-slide" style="background-image: url(images/main_swipe_image3.jpg);">
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
-                            <h1>Декорирование футболок</h1>
-                            <a href="#">Подробнее >></a>
+                            <h1>ART футболоки</h1>
                         </div>
                     </div>
                 </div>
@@ -75,7 +84,6 @@
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Белые рубашки</h1>
-                            <a href="#">Подробнее >></a>
                         </div>
                     </div>
                 </div>
@@ -83,7 +91,6 @@
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Бальное платье напрокат</h1>
-                            <a href="#">Подробнее >></a>
                         </div>
                     </div>
                 </div>
@@ -91,7 +98,6 @@
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Хочу как на фоточке</h1>
-                            <a href="#">Подробнее >></a>
                         </div>
                     </div>
                 </div>
@@ -99,7 +105,6 @@
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Публичная деятельность</h1>
-                            <a href="#">Подробнее >></a>
                         </div>
                     </div>
                 </div>
@@ -107,15 +112,13 @@
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Лупа эстета</h1>
-                            <a href="#">Подробнее ></a>
                         </div>
                     </div>
                 </div>
                 <div class="swiper-slide" style="background-image: url(images/main_swipe_image1.jpg);">
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
-                            <h1>Гардероб Елены Цезельской</h1>
-                            <a href="#">Подробнее ></a>
+                            <h1>Мой гардероб</h1>
                         </div>
                     </div>
                 </div>
