--- a/about.html
+++ b/about.html
@@ -19,11 +19,19 @@
                     <div id="st2" class="stick"></div>
                     <div id="st3" class="stick"></div>
                 </div>
-                <div class="naver">
-                    <a href="index.html"><div class="parallelogram"><p class="p_naver">Главная</p></div></a>
-                    <a href="index.html"><div class="parallelogram"><p class="p_naver">Публичная деятельность</p></div></a>
-                    <a href="index.html"><div class="parallelogram"><p class="p_naver">Лупа <br> эстета</p></div></a>
-                </div>
+                <marquee class="marquee">
+                    <a href="index.html">Главная</a>
+                    <a href="index.html">Ручная вышивка</a>
+                    <a href="index.html">Индивидуальные лекала</a>
+                    <a href="index.html">ART футболки</a>
+                    <a href="index.html">Белые рубашки</a>
+                    <a href="index.html">Бальное платье напрокат</a>
+                    <a href="index.html">Хочу как на фоточке</a>
+                    <a href="index.html">Мой гардероб</a>
+                    <a href="index.html">Публичная деятельность</a>
+                    <a href="about.html">Обо мне</a>
+                    <a href="#footer_contacts" class="scroll">Контакты</a>
+                </marquee>
             </div>
             <div class="burger_menu">
                 <a href="index.html" class="bigger_burger_a">ГЛАВНАЯ</a>
@@ -40,10 +48,14 @@
                 </div>
             </div>
             <h1 class="header_name_page">ОБО МНЕ</h1>
-            <div class="line_big" style="background-color: white; position: absolute; top: 97%; left: 9%;"></div>
+            <div class="arrow-7">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </header>
-    <main>
+    <main id="main_scroll">
         <a href="#darkerID" class="scrollToTop scroll"><img class="imgToTop" src="images/strelka_rjfnfkmhm72a_64.png"></a>
         <div class="background_profile">
             <img src="images/profile_image.jpg" class="img_profile">
