--- a/index.html
+++ b/index.html
@@ -19,19 +19,43 @@
                     <div id="st2" class="stick"></div>
                     <div id="st3" class="stick"></div>
                 </div>
-                <marquee class="marquee" scrollamount="8">
-                    <a href="index.html">Главная</a>
-                    <a href="index.html">Публичная деятельность</a>
-                    <a href="about.html">Обо мне</a>
-                    <a href="index.html">Ручная вышивка</a>
-                    <a href="index.html">Индивидуальные лекала</a>
-                    <a href="index.html">ART футболки</a>
-                    <a href="index.html">Белые рубашки</a>
-                    <a href="index.html">Бальное платье напрокат</a>
-                    <a href="index.html">Хочу как на фоточке</a>
-                    <a href="index.html">Мой гардероб</a>
-                    <a href="#footer_contacts" class="scroll">Контакты</a>
-                </marquee>
+                <div class="swiper run-swiper">
+                    <div class="swiper-wrapper run-swiper-wrapper">
+                        <div class="swiper-slide">
+                            <a href="index.html"><div class="parallelogram"><p class="p_naver">Главная</p></div></a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="index.html"><div class="parallelogram"><p class="p_naver">Публичная <br> деятельность</p></div></a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="about.html"><div class="parallelogram"><p class="p_naver">Обо мне</p></div></a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="index.html"><div class="parallelogram"><p class="p_naver">Ручная <br> вышивка</p></div></a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="index.html"><div class="parallelogram"><p class="p_naver">Индивидуальные <br> лекала</p></div></a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="index.html"><div class="parallelogram"><p class="p_naver">ART <br> футболки</p></div></a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="index.html"><div class="parallelogram"><p class="p_naver">Белые <br> рубашки</p></div></a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="index.html"><div class="parallelogram"><p class="p_naver">Бальное <br> платье напрокат</p></div></a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="index.html"><div class="parallelogram"><p class="p_naver">Хочу как <br> на фоточке</p></div></a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="index.html"><div class="parallelogram"><p class="p_naver">Мой <br> гардероб</p></div></a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="#footer_contacts" class="scroll"><div class="parallelogram"><p class="p_naver">Контакты</p></div></a>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="burger_menu">
                 <a href="index.html" class="bigger_burger_a">ГЛАВНАЯ</a>
@@ -57,65 +81,65 @@
     </header>
     <main style="height: 100dvh;">
         <a href="#darkerID" class="scrollToTop scroll"><img class="imgToTop" src="images/strelka_rjfnfkmhm72a_64.png"></a>
-        <div class="swiper">
+        <div class="swiper swiper-main">
             <div class="swiper-wrapper">
-                <div class="swiper-slide" style="background-image: url(images/main_swipe_image1.jpg);">
+                <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image1.jpg);">
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Ручная вышивка</h1>
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide" style="background-image: url(images/main_swipe_image2.jpg);">
+                <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image2.jpg);">
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Индивидуальные лекала</h1>
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide" style="background-image: url(images/main_swipe_image3.jpg);">
+                <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image3.jpg);">
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>ART футболоки</h1>
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide" style="background-image: url(images/main_swipe_image4.jpg);">
+                <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image4.jpg);">
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Белые рубашки</h1>
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide" style="background-image: url(images/main_swipe_image1.jpg);">
+                <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image1.jpg);">
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Бальное платье напрокат</h1>
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide" style="background-image: url(images/main_swipe_image2.jpg);">
+                <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image2.jpg);">
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Хочу как на фоточке</h1>
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide" style="background-image: url(images/main_swipe_image1.jpg);">
+                <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image1.jpg);">
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Публичная деятельность</h1>
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide" style="background-image: url(images/main_swipe_image4.jpg);">
+                <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image4.jpg);">
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Лупа эстета</h1>
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide" style="background-image: url(images/main_swipe_image1.jpg);">
+                <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image1.jpg);">
                     <div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Мой гардероб</h1>
