add hand_embroidery.html, popups, phpmailer

--- a/esthete.html
+++ b/esthete.html
@@ -75,7 +75,7 @@
                     <a onclick="backwards()" href="#footer_contacts" class="burger_a scroll">КОНТАКТЫ</a>
                 </div>
             </div>
-            <h1 class="header_name_page">ОБО МНЕ</h1>
+            <h1 class="header_name_page">ЛУПА ЭСТЕТА</h1>
             <div class="arrow-7">
                 <span></span>
                 <span></span>
@@ -85,20 +85,8 @@
     </header>
     <main id="main_scroll">
         <a href="#darkerID" class="scrollToTop scroll"><img class="imgToTop" src="images/strelka_rjfnfkmhm72a_64.png"></a>
-        <div class="background_profile">
-            <img src="images/profile_image.jpg" class="img_profile">
-            <div class="text_profile">
-                <h3>Елена Цезельская</h3>
-                <div class="line_small"></div>
-                <p>Дизайнер и конструктор одежды <br>
-                    Художник по вышивке <br>
-                    Дизайнер и конструктор одежды <br>
-                    Художник по вышивке</p>
-                <a href="#footer_contacts" class="button_description scroll">Мои соцсети</a>
-            </div>
-        </div>
 
-        <h1>КОНЦЕПЦИЯ</h1>
+        <h1>Lorem ipsum</h1>
         <div class="line_big"></div>
         <p class="narration"> <span class="emphasis">Lorem ipsum</span> dolor sit amet, consectetur
             adipiscing elit, sed do eiusmod tempor
@@ -115,7 +103,7 @@
             commodo consequat</p>
         <div class="background_picture_narration"></div>
 
-        <h1>ФИЛОСОФИЯ БРЕНДА</h1>
+        <h1>Lorem ipsum</h1>
         <div class="line_big"></div>
         <div class="background_narration">
             <p class="narration"> <span class="emphasis_darker">Lorem ipsum</span> dolor sit amet, consectetur
