--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <a href="about.html"><div class="parallelogram"><p class="p_naver">Обо мне</p></div></a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="index.html"><div class="parallelogram"><p class="p_naver">Ручная <br> вышивка</p></div></a>
+                            <a href="hand_embroidery.html"><div class="parallelogram"><p class="p_naver">Ручная <br> вышивка</p></div></a>
                         </div>
                         <div class="swiper-slide">
                             <a href="index.html"><div class="parallelogram"><p class="p_naver">Индивидуальные <br> лекала</p></div></a>
@@ -52,6 +52,9 @@
                             <a href="index.html"><div class="parallelogram"><p class="p_naver">Мой <br> гардероб</p></div></a>
                         </div>
                         <div class="swiper-slide">
+                            <a href="esthete.html"><div class="parallelogram"><p class="p_naver">Лупа <br> эстета</p></div></a>
+                        </div>
+                        <div class="swiper-slide">
                             <a href="#footer_contacts" class="scroll"><div class="parallelogram"><p class="p_naver">Контакты</p></div></a>
                         </div>
                     </div>
@@ -62,12 +65,12 @@
                 <a href="index.html" class="bigger_burger_a">ПУБЛИЧНАЯ ДЕЯТЕЛЬНОСТЬ</a>
                 <a href="about.html" class="bigger_burger_a">ОБО МНЕ</a>
                 <div class="smaller">
-                    <a href="index.html" class="burger_a">РУЧНАЯ ВЫШИВКА</a>
+                    <a href="hand_embroidery.html" class="burger_a">РУЧНАЯ ВЫШИВКА</a>
                     <a href="index.html" class="burger_a">ИНДИВИДУАЛЬНЫЕ ЛЕКАЛА</a>
                     <a href="index.html" class="burger_a">ART ФУТБОЛКИ</a>
                     <a href="index.html" class="burger_a">БЕЛЫЕ РУБАШКИ</a>
                     <a href="index.html" class="burger_a">БАЛЬНОЕ ПЛАТЬЕ НАПРОКАТ</a>
-                    <a href="index.html" class="burger_a">ЛУПА ЭСТЕТА</a>
+                    <a href="esthete.html" class="burger_a">ЛУПА ЭСТЕТА</a>
                     <a onclick="backwards()" href="#footer_contacts" class="burger_a scroll">КОНТАКТЫ</a>
                 </div>
             </div>
@@ -84,67 +87,67 @@
         <div class="swiper swiper-main">
             <div class="swiper-wrapper">
                 <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image1.jpg);">
-                    <div class="swiper-slide-div">
+                    <a href="hand_embroidery.html"><div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Ручная вышивка</h1>
                         </div>
-                    </div>
+                    </div></a>
                 </div>
                 <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image2.jpg);">
-                    <div class="swiper-slide-div">
+                    <a href="index.html"><div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Индивидуальные лекала</h1>
                         </div>
-                    </div>
+                    </div></a>
                 </div>
                 <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image3.jpg);">
-                    <div class="swiper-slide-div">
+                    <a href="index.html"><div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
-                            <h1>ART футболоки</h1>
+                            <h1>ART футболки</h1>
                         </div>
-                    </div>
+                    </div></a>
                 </div>
                 <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image4.jpg);">
-                    <div class="swiper-slide-div">
+                    <a href="index.html"><div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Белые рубашки</h1>
                         </div>
-                    </div>
+                    </div></a>
                 </div>
                 <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image1.jpg);">
-                    <div class="swiper-slide-div">
+                    <a href="index.html"><div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Бальное платье напрокат</h1>
                         </div>
-                    </div>
+                    </div></a>
                 </div>
                 <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image2.jpg);">
-                    <div class="swiper-slide-div">
+                    <a href="index.html"><div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Хочу как на фоточке</h1>
                         </div>
-                    </div>
+                    </div></a>
                 </div>
                 <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image1.jpg);">
-                    <div class="swiper-slide-div">
+                    <a href="index.html"><div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Публичная деятельность</h1>
                         </div>
-                    </div>
+                    </div></a>
                 </div>
                 <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image4.jpg);">
-                    <div class="swiper-slide-div">
+                    <a href="esthete.html"><div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Лупа эстета</h1>
                         </div>
-                    </div>
+                    </div></a>
                 </div>
                 <div class="swiper-slide swiper-slide-main" style="background-image: url(images/main_swipe_image1.jpg);">
-                    <div class="swiper-slide-div">
+                    <a href="index.html"><div class="swiper-slide-div">
                         <div class="swiper-slide-about" data-swiper-parallax="-150" data-swiper-parallax-scale="0.2">
                             <h1>Мой гардероб</h1>
                         </div>
-                    </div>
+                    </div></a>
                 </div>
             </div>
             <div class="swiper-scrollbar" style="height: 40dvh; top: 30dvh; background: rgba(255, 255, 255, 0.2);"></div>
@@ -154,11 +157,12 @@
         <div class="indent_footer" style="padding-top: 60px;">
             <h4>Контактная информация</h4>
             <div class="footer_string"><img src="images/pngegg.png" class="img_contact_footer"><p class="footer_p">+7 924 307 67 07</p></div>
-            <div class="footer_string"><img src="images/pngwing.com.png" class="img_contact_footer"><p class="footer_p">tsezhel@mail.ru</p></div>
+            <div class="footer_string"><img src="images/pngwing.com.png" class="img_contact_footer"><p class="footer_p">elenatsezelen@gmail.com</p></div>
             <div class="footer_string"><img src="images/free-icon-pin-map-4230161.png" class="img_contact_footer"><p class="footer_p">г. Хабаровск, ул. Какая-то-там, 52</p></div>
             <h4>Социальные сети</h4>
             <div class="footer_string"><img src="images/telegram_icon.png" class="img_contact_footer"><a class="footer_p" href="https://t.me/tsezelen" style="text-decoration: underline;">Телеграм канал</a></div>
-            <h4>Документы</h4>
+            <h4>Техническая поддержка</h4>
+            <div class="footer_string"><img src="images/telegram_icon.png" class="img_contact_footer"><a class="footer_p" href="https://t.me/proger_vadim" style="text-decoration: underline;">Техподдержка</a></div>
         </div>
     </footer>
     <script src="swiper-bundle.min.js"></script>
