--- a/hand_embroidery.html
+++ b/hand_embroidery.html
@@ -119,7 +119,7 @@
                 <div class="popup-text">
                     <h2>Ошибка</h2>
                     <div class="line_big"></div>
-                    <p>Технические неполадки, Вы можете обратиться в <a href="#footer_contacts" class="scroll" style="color: #ffab8d;">тех. поддержку</a> и <a href="#footer_contacts" class="scroll" style="color: #ffab8d;">связаться с нами</a></p> 
+                    <p>Технические неполадки, Вы можете обратиться в <a href="#footer_contacts" class="scroll" style="color: #ffab8d;">службу поддержки</a> и <a href="#footer_contacts" class="scroll" style="color: #ffab8d;">связаться с нами</a></p> 
                     <button onclick="close_popup('popup-success')" class="popup-button">ОК</button>   
                 </div>
             </div>
